# AccessibilityHub

./: .gitignore  AUTHORS  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
deploy/: README.md  fabfile.py  servers_config.json
deploy/haproxy/: haproxy.cfg
deploy/nginx/: accessibilityhub
deploy/systemd/: gunicorn.service
src/: manage.py
src/accessibilityHub/: manage.py  settings.py  urls.py  utils.py  wsgi.py
src/accessibilityHub/accessibilityHub/: asgi.py  settings.py  urls.py
src/accessibilityHub/api/: admin.py  urls.py  views.py
src/accessibilityHub/api/templates/api/: new_owner_form.html  new_tool_form.html  new_tool_success.html  review_form.html
src/accessibilityHub/core/: context_processors.py  forms.py  urls.py  views.py
src/accessibilityHub/core/fixtures/: User.json
src/accessibilityHub/core/static/: base.css
src/accessibilityHub/core/static/core/: base.css  main.css  main.js  reset.css
src/accessibilityHub/core/templates/: _base.html
src/accessibilityHub/core/templates/core/: about.html  base.html  create_account.html  footer.html  head.html  header.html  home.html  login.html  logout.html  signup.html  siteNavigation.html
src/accessibilityHub/discussions/: forms.py  models.py  urls.py  views.py
src/accessibilityHub/discussions/fixtures/: Comment.json  Topic.json
src/accessibilityHub/discussions/migrations/: 0001_initial.py  0002_alter_comment_options_alter_topic_options.py
src/accessibilityHub/discussions/templates/discussions/: index.html  landing.html  newTopic.html  searchResults.html  topic.html
src/accessibilityHub/review/: forms.py  models.py  urls.py  views.py
src/accessibilityHub/review/migrations/: 0002_review_createdat.py  0005_tool_slug_alter_owner_slug.py  0009_review_updatedat_alter_review_rating.py
src/accessibilityHub/review/templates/review/: index.html  new_tool.html  owner.html  review_form.html  search.html  tool.html  toolObject.html
src/accessibilityHub/reviews/: admin.py  forms.py  models.py  urls.py  views.py
src/accessibilityHub/reviews/fixtures/: Owner.json  Review.json  Tool.json
src/accessibilityHub/reviews/migrations/: 0001_initial.py  0002_owner_createdat_owner_updatedat_tool_createdat_and_more.py  0003_alter_review_comment.py  0004_owner_slug.py  0006_alter_tool_slug.py  0007_owner_verified_tool_verified_alter_tool_slug.py  0008_alter_owner_slug_alter_tool_slug.py
src/accessibilityHub/reviews/templates/reviews/: index.html  new_tool.html  owner.html  review_form.html  search.html  tool.html  toolObject.html
src/accessibilityHub/tests/: test_utils.py
src/accessibilityHub/tests/test_api/: test_urls.py
src/accessibilityHub/tests/test_core/: test_urls.py
src/accessibilityHub/tests/test_discussions/: test_urls.py
src/accessibilityHub/tests/test_reviews/: test_urls.py
src/core/: forms.py  urls.py  views.py
src/core/static/core/css/: footer-style.css  header-style.css
src/core/templates/core/: base.html  footer.html  head.html  header.html  home_page.html
static/: index.html
static/styles/: header-style.css
