[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accessibilityHub"
dynamic = ["version"]
description = '\x1b[1;5F\x1b[1;5F\x1b[1;5F\x1b[1;5F\x1b[1;5F\x1b[4~A community focused on accessibility'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Abdulqadir Ahmad", email = "arfs6.mail@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"django",
"django-htmx",
"python-dotenv",
]

[project.optional-dependencies]
dev = [
	"ruff",
"fabric",
]
production = [
	"unicorn",
]

	[tool.hatch.envs.default]
	features = ["dev"]

	[tool.hatch.envs.default.scripts]
	random-secret-key = """
python -<<'EOF'
from django.core.management.utils import get_random_secret_key
print('DJANGO_SECRET_KEY="', get_random_secret_key(), '"', sep='')
EOF
"""

[project.urls]
Source = "https://github.com/arfs6/AccessibilityHub"

[tool.hatch.version]
path = "src/accessibilityHub/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/accessibilityHub}"

[tool.coverage.run]
source = ["accessibilityHub", "tests"]
branch = true
parallel = true
omit = [
  "src/accessibilityHub/__about__.py",
]

[tool.coverage.paths]
accessibilityHub = ["src/accessibilityHub", "*/accessibilityHub/src/accessibilityHub"]
tests = ["tests", "*/accessibilityHub/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/accessibilityHub"]

[tool.ruff]
ignore = [
	"N999", # Ignore camel case for package and models names
	"N816", # Ignore camel case for global variable
]
[tool.ruff.format]
quote-style = "single"
